; ModuleID = '/home/carl/AnghaBench/linux/lib/math/extr_prime_numbers.c_is_prime_number.c'
source_filename = "/home/carl/AnghaBench/linux/lib/math/extr_prime_numbers.c_is_prime_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.primes = type { i64, i32 }

@primes = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_prime_number(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.primes*, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  %6 = call i32 (...) @rcu_read_lock()
  %7 = load i32, i32* @primes, align 4
  %8 = call %struct.primes* @rcu_dereference(i32 %7)
  store %struct.primes* %8, %struct.primes** %4, align 8
  br label %9

9:                                                ; preds = %23, %1
  %10 = load i64, i64* %3, align 8
  %11 = load %struct.primes*, %struct.primes** %4, align 8
  %12 = getelementptr inbounds %struct.primes, %struct.primes* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = icmp uge i64 %10, %13
  br i1 %14, label %15, label %27

15:                                               ; preds = %9
  %16 = call i32 (...) @rcu_read_unlock()
  %17 = load i64, i64* %3, align 8
  %18 = call i32 @expand_to_next_prime(i64 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %15
  %21 = load i64, i64* %3, align 8
  %22 = call i32 @slow_is_prime_number(i64 %21)
  store i32 %22, i32* %2, align 4
  br label %35

23:                                               ; preds = %15
  %24 = call i32 (...) @rcu_read_lock()
  %25 = load i32, i32* @primes, align 4
  %26 = call %struct.primes* @rcu_dereference(i32 %25)
  store %struct.primes* %26, %struct.primes** %4, align 8
  br label %9

27:                                               ; preds = %9
  %28 = load i64, i64* %3, align 8
  %29 = load %struct.primes*, %struct.primes** %4, align 8
  %30 = getelementptr inbounds %struct.primes, %struct.primes* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @test_bit(i64 %28, i32 %31)
  store i32 %32, i32* %5, align 4
  %33 = call i32 (...) @rcu_read_unlock()
  %34 = load i32, i32* %5, align 4
  store i32 %34, i32* %2, align 4
  br label %35

35:                                               ; preds = %27, %20
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local %struct.primes* @rcu_dereference(i32) #1

declare dso_local i32 @rcu_read_unlock(...) #1

declare dso_local i32 @expand_to_next_prime(i64) #1

declare dso_local i32 @slow_is_prime_number(i64) #1

declare dso_local i32 @test_bit(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
